--- a/src/main/resources/templates/welcome.html
+++ b/src/main/resources/templates/welcome.html
@@ -14,13 +14,13 @@
 <body>
 
 <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
-    <a class="navbar-brand" href="#">Spring Boot on App Service</a>
+    <a class="navbar-brand" href="#">Sharad's service</a>
 </nav>
 
 <main role="main" class="container">
 
     <div class="starter-template">
-        <h1>Spring Boot</h1>
+        <h1>Hi!! This is Sharad</h1>
         <h3>
             ... deployed onto Azure with GitHub Actions
         </h3>
